--- a/.github/workflows/sync_contributor_repository.yml
+++ b/.github/workflows/sync_contributor_repository.yml
@@ -19,11 +19,20 @@ jobs:
         shell: bash
 
     steps:
-    - name: Github REST API Call
+    - name: 'Notify Contrib Repository'
       env:
         CI_TOKEN: ${{ secrets.CI_TOKEN }}
         PARENT_REPO: ATTWoWAddon/Contrib
         PARENT_BRANCH: main
         WORKFLOW_ID: 67054282
+      run: |
+        curl -fL --retry 3 -X POST -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ env.CI_TOKEN }}" https://api.github.com/repos/${{ env.PARENT_REPO }}/actions/workflows/${{ env.WORKFLOW_ID }}/dispatches -d '{"ref":"${{ env.PARENT_BRANCH }}"}'
+    
+    - name: 'Notify User Repository'
+      env:
+        CI_TOKEN: ${{ secrets.CI_TOKEN }}
+        PARENT_REPO: ATTWoWAddon/User
+        PARENT_BRANCH: main
+        WORKFLOW_ID: 67354347
       run: |
         curl -fL --retry 3 -X POST -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ env.CI_TOKEN }}" https://api.github.com/repos/${{ env.PARENT_REPO }}/actions/workflows/${{ env.WORKFLOW_ID }}/dispatches -d '{"ref":"${{ env.PARENT_BRANCH }}"}'
