--- a/.github/workflows/notify_parent_repos.yml
+++ b/.github/workflows/notify_parent_repos.yml
@@ -1,4 +1,4 @@
-name: 'Submodule Notify Parent'
+name: 'Submodule Notify Parents'
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   notify:
-    name: 'Submodule Notify Parent'
+    name: 'Submodule Notify Parents'
     runs-on: ubuntu-latest
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
